fixed headers & TOC

--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -3,7 +3,7 @@ title: 'Supporting Information: Thermal sensitivity across forest vertical profi
 output:
   word_document:
     toc: true
-    toc_depth: 2
+    toc_depth: 1
 bibliography: Zotero_references.bib
 csl: new-phytologist.csl 
 
@@ -60,7 +60,7 @@ SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological c
 
 \newpage
 
-##  `r appendix_NEON_methods_title`
+#  `r appendix_NEON_methods_title`
 
 
 Google doc: https://docs.google.com/document/d/1HdPa7X5AMrEwfLjazGMU92uTYMc6pObh/edit#heading=h.gjdgxs 
@@ -68,10 +68,10 @@ Google doc: https://docs.google.com/document/d/1HdPa7X5AMrEwfLjazGMU92uTYMc6pObh
 see [Issue 2](https://github.com/EcoClimLab/vertical-thermal-review/issues/2) , [issue 20](https://github.com/EcoClimLab/vertical-thermal-review/issues/20) 
 
 
-# Study sites
+## Study sites
 We analyzed vertical gradients in key biophysical variables from the National Ecological Observatory Network's Airborne Observatory Platform (NEON AOP) and meteorology towers at six focal NEON sites [Figs 2, S1, @schimelNEONHierarchicallyDesigned2007]. The sites are well distributed across the United States and represent key forest types and structures (Table S1).
 
-# Estimating forest and light environments from lidar
+## Estimating forest and light environments from lidar
 
 *Data selection*
 
@@ -87,7 +87,7 @@ We scaled LAD values by a factor of 5.5 so that they matched an independent esti
 Generating leaf area and light transmission profiles
 Mean LAD profiles for each site were calculated as the mean LAD at each height. Mean light transmission profiles (proportion of incident light) were estimated by applying a vertical light reduction model to LAD estimates [@starkAmazonForestCarbon2012]. To estimate the proportion of sun leaves along the vertical profile, we isolated voxels in the upper canopy surface layer (1-2 m from the local canopy surface, likely to containing the majority of sun leaves), calculated the mean LAD profile for this surface layer, and divided it by the total mean LAD profile.
 
-# Analyzing biophysical gradients from micrometeorological data
+## Analyzing biophysical gradients from micrometeorological data
 
 Micrometeorological data was downloaded for each site from NEON (neonUtilies R package) at 30 minute intervals for 2015-2020. To focus on the middle of the growing season, the data was constrained to be for the month of July each year. Per site, we calculated the mean maximum and minimum values of each variable by day and by sensor height. In Figure S1 we expanded on Figure XX by including 22 sites representing five forest structure types.
  
@@ -102,7 +102,7 @@ Thus, vegetation temperature ($T_{veg}$) does not always equal or approximate $T
 
 \newpage
 
-##  `r appendix_tealeaves_methods_title`
+#  `r appendix_tealeaves_methods_title`
 
 Energy balance for a typical overstory sun leaf and understory shade leaf were modeled in the R package *tealeaves* [@muir_tealeaves_2019], parameterized for *Quercus rubra* L. leaves at Harvard Forest, MA, USA (42.5369, -72.17266).
 
@@ -165,6 +165,6 @@ ft
 ![**Figure `r SIfig_NEON_all`. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in July mean ± 1 standard deviation for maximum photosyntehtically active ratiation (PAR), maximum wind speed, minimum humidity, maximum $T_{air}$, and maximum biological temperature, $T_{bio}$. Site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`.](NEON_height_profiles/figures/profile_all_groups.png)
 
 \newpage
-## References
+# References
 
 
